# dbt-dag-opt

./: .gitignore  CHANGELOG.md  README.md  entrypoint.py  longest_paths.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
scripts/: demo.sh
src/: discovery.py  graph_parser.py  longest_path.py
src/dbt_dag_opt/: __main__.py  artifacts.py  cli.py  cost.py  errors.py  formatters.py  graph.py  longest_path.py  models.py  replay.py  replay_formatters.py
tests/: conftest.py  test_artifacts.py  test_cli.py  test_cost.py  test_demo_fixture.py  test_formatters.py  test_graph.py  test_longest_path.py  test_replay.py
tests/fixtures/: generate_demo_fixture.py  tiny_manifest.json  tiny_run_results.json
tests/fixtures/dbt_dugout/: manifest.json  run_results.json
tests/fixtures/demo_project/: manifest.json  run_results.json
